Better fix for z-index issues found on code review

--- a/src/stylus/fablevision/fv-gene-label.styl
+++ b/src/stylus/fablevision/fv-gene-label.styl
@@ -1,6 +1,6 @@
 /* establish a stacking context, so all interior z-index values are local */
 .geniblocks.genome
-  z-index: 1
+  transform: scale(1)
 
 .geniblocks.genome #mountNode .react-selectize.open
   z-index: 20
@@ -216,7 +216,7 @@ layout-c-e-highlight = #0bebff
     padding-right: 30px
 
   &.fv-layout-a .geniblocks.chromosome-container .items.rtl .labels .fv-gene-label
-    right: 1511px
+    right: 236px
 
   &.fv-layout-d .geniblocks.chromosome-container .items.rtl .labels .fv-gene-label
     right: 235px
